--- a/Skin/Titanium/screens/webradio_Home.xaml
+++ b/Skin/Titanium/screens/webradio_Home.xaml
@@ -60,6 +60,7 @@
 
           <!--Logo-->
           <StackPanel Grid.Row="1" Grid.Column="1">
+            <Image ImageSource="Default.png" Width="100" Height="100" />
             <Canvas Width="{StaticResource MEDIA_THUMB_WIDTH_CP}" Height="{StaticResource MEDIA_THUMB_HEIGHT_CP}" Background="#00000000">
               <Rectangle Width="{StaticResource MEDIA_THUMB_WIDTH_CP}" Height="{StaticResource MEDIA_THUMB_HEIGHT_CP}" RadiusY="20" RadiusX="20" Stroke="Black">
                 <Rectangle.Fill>
