--- a/Skin/default/screens/webradio_dialogFavorites.xaml
+++ b/Skin/default/screens/webradio_dialogFavorites.xaml
@@ -2,7 +2,7 @@
 <Include
     xmlns="www.team-mediaportal.com/2008/mpf/directx"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    Source="screens\master_menu.xaml">
+    Source="screens\master_configuration_dialog_wb.xaml">
   <Include.Resources>
 
     <!-- Header -->
@@ -21,12 +21,16 @@
             <ColumnDefinition Width="20*" />
           </Grid.ColumnDefinitions>
           <Grid.RowDefinitions>
-            <RowDefinition Height="10*" />
-            <RowDefinition Height="90*" />
+            <RowDefinition Height="6*" />
+            <RowDefinition Height="88*" />
+            <RowDefinition Height="6*" />
           </Grid.RowDefinitions>
 
-          <TextBox Grid.ColumnSpan="2" Grid.Row="0" Margin="10,0,10,0" Text="{Binding Path=Titel, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-          <Button Grid.Column="2" Grid.Row="0" Margin="10,0,10,0" Content="[Webradio.Favorites.Rename]" Command="{Command Rename}"/>
+          <TextBox Grid.ColumnSpan="2" Grid.Row="0" Margin="10,4,10,4" Text="{Binding Path=Titel, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+
+          <Button Grid.Column="2" Grid.Row="0" Margin="10,2,10,2" Content="[Webradio.Favorites.Rename]" Command="{Command Rename}" Style="{ThemeResource DefaultButtonStyle}"
+					HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+
           <Image Grid.Column="3" Grid.Row="0" Stretch="Uniform" Source="{Binding Path=SaveImage, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Right"/>
 
           <ListView x:Name="lv" Grid.ColumnSpan="4" Grid.Row="1" Margin="10"
@@ -44,6 +48,12 @@
             </ListView.Resources>
           </ListView>
 
+          <Button Grid.Column="1" Grid.Row="2" Margin="10,2,10,2" Content="[Webradio.Favorites.Add]" Command="{Command Add}" Style="{ThemeResource DefaultButtonStyle}"
+					HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+          <Button Grid.Column="2" Grid.Row="2" Margin="10,2,10,2" Content="[Webradio.Favorites.Delete]" Command="{Command Delete}" Style="{ThemeResource DefaultButtonStyle}"
+					HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+          <Button Grid.Column="3" Grid.Row="2" Margin="10,2,10,2" Content="[Webradio.Favorites.Save]" Command="{Command Save}" Style="{ThemeResource DefaultButtonStyle}"
+					HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
         </Grid>
       </DockPanel>
     </ControlTemplate>
