--- a/Skin/Reflexion/screens/webradio_Home.xaml
+++ b/Skin/Reflexion/screens/webradio_Home.xaml
@@ -61,6 +61,11 @@
           <!--Logo-->
           <StackPanel Grid.Row="1" Grid.Column="1">
             <Canvas Width="{StaticResource MEDIA_THUMB_WIDTH_CP}" Height="{StaticResource MEDIA_THUMB_HEIGHT_CP}" Background="#00000000">
+              <Rectangle Height="100" Width="100" RadiusY="20" RadiusX="20" Stroke="Black">
+                <Rectangle.Fill>
+                  <ImageBrush ImageSource="{Binding Path=DefaultImage}" />
+                </Rectangle.Fill>
+              </Rectangle>
               <Rectangle Width="{StaticResource MEDIA_THUMB_WIDTH_CP}" Height="{StaticResource MEDIA_THUMB_HEIGHT_CP}" RadiusY="20" RadiusX="20" Stroke="Black">
                 <Rectangle.Fill>
                   <ImageBrush DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}" ImageSource="{Binding [Logo]}"/>
