--- a/Skin/Titanium/screens/webradio_Home.xaml
+++ b/Skin/Titanium/screens/webradio_Home.xaml
@@ -60,18 +60,18 @@
 
           <!--Logo-->
           <StackPanel Grid.Row="1" Grid.Column="1">            
-            <Canvas Width="{StaticResource MEDIA_THUMB_WIDTH_CP}" Height="{StaticResource MEDIA_THUMB_HEIGHT_CP}" Background="#00000000">
-              <Rectangle Height="100" Width="100" RadiusY="20" RadiusX="20" Stroke="Black">
+            <Canvas Width="250" Height="250" Background="#00000000">
+              <Rectangle Height="250" Width="250" RadiusY="20" RadiusX="20" Stroke="Black">
                 <Rectangle.Fill>
                   <ImageBrush ImageSource="{Binding Path=DefaultImage}" />
                 </Rectangle.Fill>
               </Rectangle>
-              <Rectangle Width="{StaticResource MEDIA_THUMB_WIDTH_CP}" Height="{StaticResource MEDIA_THUMB_HEIGHT_CP}" RadiusY="20" RadiusX="20" Stroke="Black">
+              <Rectangle Width="250" Height="250" RadiusY="20" RadiusX="20" Stroke="Black">
                 <Rectangle.Fill>
                   <ImageBrush DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}" ImageSource="{Binding [Logo]}"/>
                 </Rectangle.Fill>
               </Rectangle>
-              <Rectangle Width="{StaticResource MEDIA_THUMB_WIDTH_CP}" Height="{StaticResource MEDIA_THUMB_HEIGHT_CP}" RadiusY="20" RadiusX="20" Stroke="Black" Opacity="0.5">
+              <Rectangle Width="250" Height="250" RadiusY="20" RadiusX="20" Stroke="Black" Opacity="0.5">
                 <Rectangle.Fill>
                   <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="Black" Offset="0"/>
