--- a/Skin/default/screens/webradio_dialogShowFilter.xaml
+++ b/Skin/default/screens/webradio_dialogShowFilter.xaml
@@ -54,7 +54,7 @@
           <Button Content="[Webradio.Dialog.ShowFilter.Genre]" Margin="10,5,5,5" Grid.Row="4" Grid.Column="0" 
               VerticalAlignment="Stretch"
               Command="{Command QuickGenre}"/>
-          <Button Content="[Webradio.Dialog.ShowFilter.Bitrate]" Margin="5,5,10,5" Grid.Row="4" Grid.Column="1" 
+          <Button Content="[Webradio.Dialog.ShowFilter.StreamUrls[0].Bitrate]" Margin="5,5,10,5" Grid.Row="4" Grid.Column="1" 
               VerticalAlignment="Stretch"
               Command="{Command QuickBitrate}"/>
 
