--- a/Skin/Reflexion/screens/webradio_Home.xaml
+++ b/Skin/Reflexion/screens/webradio_Home.xaml
@@ -16,8 +16,8 @@
         <Grid>
           <Grid.RowDefinitions>
             <RowDefinition Height="10*" />
-            <RowDefinition Height="50*" />
-            <RowDefinition Height="30*" />
+            <RowDefinition Height="60*" />
+            <RowDefinition Height="20*" />
             <RowDefinition Height="10*" />
           </Grid.RowDefinitions>
           <Grid.ColumnDefinitions>
@@ -32,30 +32,36 @@
               VerticalAlignment="Center" Color="{ThemeResource TextColor}"/>
           </StackPanel>
 
-          <StackPanel Orientation="Vertical" Grid.Column="0" Grid.Row="1" Margin="5,5,5,5">          
-            <Label VerticalAlignment="Center" HorizontalAlignment="Left" Content="[Webradio.Home.Genres]" 
+          <StackPanel Orientation="Vertical" Grid.Column="0" Grid.Row="1" Margin="5,5,5,5">
+            <Label VerticalAlignment="Center" HorizontalAlignment="Left" Content="[Webradio.Home.Genres]"
               FontSize="{ThemeResource SmallFontSize}" Color="{ThemeResource EmphasisTextColor}"/>
-            
-            <Label VerticalAlignment="Center" HorizontalAlignment="Left" DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}" 
+
+            <Label VerticalAlignment="Center" HorizontalAlignment="Left" DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}"
               Content="{Binding [Genres]}" FontSize="{ThemeResource SmallerFontSize}" Color="{ThemeResource TextColor}"/>
-            
-            <Label VerticalAlignment="Center" HorizontalAlignment="Left" Content="[Webradio.Home.StreamUrls[0].Bitrate]" 
+
+            <Label VerticalAlignment="Center" HorizontalAlignment="Left" Content="[Webradio.Home.Bitrate]"
               FontSize="{ThemeResource SmallFontSize}" Color="{ThemeResource EmphasisTextColor}"/>
-            
-            <Label VerticalAlignment="Center" HorizontalAlignment="Left" DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}" 
+
+            <Label VerticalAlignment="Center" HorizontalAlignment="Left" DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}"
               Content="{Binding [Bitrate]}" FontSize="{ThemeResource SmallerFontSize}" Color="{ThemeResource TextColor}"/>
-            
-            <Label VerticalAlignment="Center" HorizontalAlignment="Left" Content="[Webradio.Home.Country]" 
+
+            <Label VerticalAlignment="Center" HorizontalAlignment="Left" Content="[Webradio.Home.Country]"
               FontSize="{ThemeResource SmallFontSize}" Color="{ThemeResource EmphasisTextColor}"/>
-            
-            <Label VerticalAlignment="Center" HorizontalAlignment="Left" DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}" 
+
+            <Label VerticalAlignment="Center" HorizontalAlignment="Left" DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}"
               Content="{Binding [Country]}" FontSize="{ThemeResource SmallerFontSize}" Color="{ThemeResource TextColor}"/>
-            
-            <Label VerticalAlignment="Center" HorizontalAlignment="Left" Content="[Webradio.Home.City]" 
+
+            <Label VerticalAlignment="Center" HorizontalAlignment="Left" Content="[Webradio.Home.City]"
               FontSize="{ThemeResource SmallFontSize}" Color="{ThemeResource EmphasisTextColor}"/>
-            
-            <Label VerticalAlignment="Center" HorizontalAlignment="Left" DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}" 
+
+            <Label VerticalAlignment="Center" HorizontalAlignment="Left" DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}"
               Content="{Binding [City]}" FontSize="{ThemeResource SmallerFontSize}" Color="{ThemeResource TextColor}"/>
+
+            <Label VerticalAlignment="Center" HorizontalAlignment="Left" Content="[Webradio.Home.Language]"
+              FontSize="{ThemeResource SmallFontSize}" Color="{ThemeResource EmphasisTextColor}"/>
+
+            <Label VerticalAlignment="Center" HorizontalAlignment="Left" DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}"
+              Content="{Binding [Language]}" FontSize="{ThemeResource SmallerFontSize}" Color="{ThemeResource TextColor}"/>
           </StackPanel>
 
           <!--Logo-->
